samples/_failures_safe/1761699526_5984c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1f4177fe.c: In function ‘main’:
./samples/SAFE/__tmp_1f4177fe.c:150:13: error: expected declaration or statement at end of input
  150 |             continue;
      |             ^~~~~~~~
./samples/SAFE/__tmp_1f4177fe.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1f4177fe.c:150:13: error: expected declaration or statement at end of input
